<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:scrollbars="none"
        android:layout_margin="16dp"
        tools:context=".view.MainActivity">

    <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_product_grid" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                              android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_product_grid"
                            android:padding="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                    android:layout_width="match_parent"
                    android:gravity="start"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:text="Article Section Title"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/textView" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/cv_product_grid"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/rv_article_section"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_article_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            />
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar" android:layout_marginTop="268dp"
                    app:layout_constraintTop_toTopOf="@+id/cv_product_grid" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>